--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza City</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title>Pizza King</title>
 </head>
 <body>
+    <!-- navigation bar -->
+    <nav class="navbar navbar-expand-large bg-dark text-ligth">
+        <div class="container">
+            <a href="#" class="navbar-brand fs-1 ">Pizza <span>King</span></a>
+
+            
+        </div>
+    </nav>
     
 </body>
 </html>
