--- a/index.html
+++ b/index.html
@@ -10,13 +10,31 @@
 </head>
 <body>
     <!-- navigation bar -->
-    <nav class="navbar navbar-expand-large bg-dark text-ligth">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
         <div class="container">
-            <a href="#" class="navbar-brand fs-1 ">Pizza <span>King</span></a>
+            <a href="#" class="navbar-brand fs-1">Pizza <span>King</span></a>
 
-            
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu"><span class="navbar-toggler-icon"></span></button>
+
+            <div class="collapse navbar-collapse" id="navmenu">
+                <ul class="navbar-nav ms-auto fs-4">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">products</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">orders</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">contacts</a>
+                    </li>
+                </ul>
+            </div>
+
         </div>
     </nav>
+    <section class="description">
+
+    </section>
     
 </body>
 </html>
