adding the about section

--- a/index.html
+++ b/index.html
@@ -32,9 +32,18 @@
 
         </div>
     </nav>
-    <section class="description">
+    <!-- about -->
+    <section class="about bg-dark">
+        <div class="container text-center "><br><br><br><br><br><br><br><br><br>
+            <h1> WE HAVE THE BEST PIZZA IN TOWN</h1><br>
+            <p class="fs-4">we have professional food, effective coupons and quick delivery</p>
+
+
+        </div>
 
     </section>
-    
+    <section class="types" id="types">
+        
+    </section>
 </body>
 </html>
