adding the menu section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto fs-4">
                     <li class="nav-item">
-                        <a href="#" class="nav-link">products</a>
+                        <a href="#" class="nav-link">Menu</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">orders</a>
@@ -43,6 +43,23 @@
 
     </section>
     <section class="types" id="types">
+        <div class="container m-5 text-center">
+            <h3>Menu</h3>
+            <div class="row align-items-center">
+                <div class="col">
+                  <img src="images/small.jpeg" alt="small">
+                  <h6>small</h6>
+                </div>
+                <div class="col">
+                    <img src="images/large.jpeg" alt="medium">
+                    <h6>medium</h6>
+                </div>
+                <div class="col">
+                    <img src="images/medium.jpeg" alt="large">
+                    <h6>large</h6>
+                </div>
+              </div>
+        </div>
         
     </section>
 </body>
