--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Pizza King</title>
 </head>
@@ -72,42 +73,48 @@
 
             <h5 class="text-white">choose your favourite type</h5>
 
-            <select class="form-select form-select-sm" aria-label=".form-select-sm example">
-                <option value="1">Chicken Hawaiian</option>
-                <option selected value="2">Meat Deluxe</option>
-                <option value="3">Chicken Macon BBQ</option>
-                <option value="3">Chicken & Beef Pepperoni</option>
+            <select class="form-select form-select-sm" id="type">
+                <option >Chicken Hawaiian</option>
+                <option selected>Meat Deluxe</option>
+                <option >Chicken Macon BBQ</option>
+                <option >Chicken & Beef Pepperoni</option>
             </select><br>
             <h5 class="text-white">choose the size you want</h5>
-            <select class="form-select form-select-sm" aria-label=".form-select-sm example">
-                <option value="1">small @ 600</option>
-                <option value="2">medium @ 800</option>
-                <option  selected value="3">large @ 1000</option>
+            <select class="form-select form-select-sm" id="size">
+                <option value="600" >small @ 600</option>
+                <option  value="800">medium @ 800</option>
+                <option  selected value="1000">large @ 1000</option>
             </select><br>
             <h5 class="text-white">Choose your favourite crust</h5>
 
-            <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+            <select class="form-select form-select-sm" id="crust">
                 <option selected>Open this select menu</option>
-                <option value="1">stuffed @200</option>
-                <option value="2">gluten@ 150</option>
-                <option selected value="3">crispy @ 300</option>
+                <option value="200">stuffed @200</option>
+                <option value="150">gluten@ 150</option>
+                <option selected value="300">crispy @ 300</option>
             </select><br>
             <h5 class="text-white">choose your favourite toping</h5>
-            <select class="form-select form-select-sm" aria-label=".form-select-sm example">
-                <option value="1">meat</option>
-                <option value="2">sausage</option>
-                <option value="3">onion</option>
-                <option selected value="3">cheese</option>
+            <select class="form-select form-select-sm" id="toping">
+                <option >meat</option>
+                <option >sausage</option>
+                <option >onion</option>
+                <option selected >cheese</option>
             </select><br>
             <h5 class="text-white">number of Pizza</h5>
-            <input class="form-control" type="number" placeholder="number to be delivered" min="1"><br>
+            <input class="form-control" id="ordered" type="number" placeholder="number to be delivered" min="1"><br>
 
-            <button type="button" class="btn btn-success">Checkout</button>
+            <button type="button" class="btn btn-success" onclick="number()">Checkout</button>
+
+            <p id="result" class="text-white">this</p>
 
 
         </div>
 
     </section>
+
+
+    <script src="app.js"></script>
+    <script src="jquery.js"></script>
 
 
 </body>
