--- a/index.html
+++ b/index.html
@@ -70,62 +70,50 @@
     <section class="orders"><br><br><br>
         <div class="container text-center">
             <h2 class="text-white ">ORDER NOW!!!</h2>
-
-            <h5 class="text-white">choose your favourite type</h5>
-
-            <select class="form-select form-select-sm" id="type">
-                <option >Chicken Hawaiian</option>
-                <option selected>Meat Deluxe</option>
-                <option >Chicken Macon BBQ</option>
-                <option >Chicken & Beef Pepperoni</option>
-            </select><br>
-            <h5 class="text-white">choose the size you want</h5>
-            <select class="form-select form-select-sm" id="size">
-                <option value="600" >small @ 600</option>
-                <option  value="800">medium @ 800</option>
-                <option  selected value="1000">large @ 1000</option>
-            </select><br>
-            <h5 class="text-white">Choose your favourite crust</h5>
-
-            <select class="form-select form-select-sm" id="crust">
-                <option selected>Open this select menu</option>
-                <option value="200">stuffed @200</option>
-                <option value="150">gluten@ 150</option>
-                <option selected value="300">crispy @ 300</option>
-            </select><br>
-            <h5 class="text-white">choose your favourite toping</h5>
-            <select class="form-select form-select-sm" id="toping">
-                <option >meat</option>
-                <option >sausage</option>
-                <option >onion</option>
-                <option selected >cheese</option>
-            </select><br>
-            <h5 class="text-white">number of Pizza</h5>
-            <input class="form-control" id="ordered" type="number" placeholder="number to be delivered" min="1"><br>
-
-            <button type="button" class="btn btn-success" onclick="number()">Checkout</button><br><br><br>
-
-
-        </div>
-
-    </section>
-    <section class="deliveries"><br><br><br><br><br><br><br>
-        <div class="container text-white text-center">
-            <h2>DELIVERY</h2>
-            <div class="mb-3">
-                <h5 class="text-white">Name</h5>
-                <input type="text" class="form-control" id="name" placeholder="name">
-              </div>
-              <div class="mb-3">
-                <h5 class="text-white">Phone Number</h5>
-                <input type="number" class="form-control" id="phone" placeholder="phone number">
-              </div>
-              <div class="mb-3">
-                <h5 class="text-white">Location</h5>
-                <input type="location" class="form-control" id="location" placeholder="location">
+            <div class="container overflow-hidden">
+                <div class="row gy-5">
+                  <div class="col-6">
+                    <div class="p-3 border bg-light">
+                        <h4>pizza type</h4>
+                        <input type="radio" name="flavour" id="hawaian" value="hawaian">hawaian <br>
+                        <input type="radio" name="flavour" id="deluxe" value="deluxe">Meat Deluxe. <br>
+                        <input type="radio" name="flavour" id="pepperoni" value="pepperoni">Chicken & Beef Pepperoni<br>
+                        <input type="radio" name="flavour" id="veg" value="veg">Veg Feast. <br>
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <div class="p-3 border bg-light">
+                        <h4>pizza type</h4>
+                        <input type="radio" name="size" id="large" value="large">large @ 1000<br>
+                        <input type="radio" name="size" id="medium" value="medium">medium @ 800<br>
+                        <input type="radio" name="size" id="small" value="small">small @ 600<br><br>
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <div class="p-3 border bg-light">
+                        <h4>Crust</h4>
+                        <input type="radio" name="crust" id="stuffed" value="stuffed">stuffed <br>
+                        <input type="radio" name="crust" id="crispy" value="crispy">crispy <br>
+                        <input type="radio" name="crust" id="glutten" value="glutten">glutten <br><br>
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <div class="p-3 border bg-light">
+                        <h4>Topping</h4>
+                        <input type="radio" name="crust" id="stuffed" value="stuffed">Sausage <br>
+                        <input type="radio" name="crust" id="crispy" value="crispy">Meat <br>
+                        <input type="radio" name="crust" id="glutten" value="glutten">Onion <br>
+                        <input type="radio" name="crust" id="glutten" value="glutten">Extra Cheese<br>
+                    </div>
+                    </div>
+                    <h4 class="text-white">Number ordered </h4>
+                    <input class="text-center" style="width: 300px; margin-left: auto; margin-right: auto;" type="number" name="number" id="num" value="number" min="1">
+                  </div><br>
+                  <button type="button" class="btn btn-success text-center" onclick="number()">Checkout</button><br><br><br>
+                </div>
               </div>
 
-              <button type="button" class="btn btn-success">Submit</button>
+
         </div>
 
     </section>
