--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Pizza King</title>
 </head>
@@ -72,53 +73,64 @@
             <h2 class="text-white ">ORDER NOW!!!</h2>
             <div class="container overflow-hidden">
                 <div class="row gy-5">
-                  <div class="col-6">
-                    <div class="p-3 border bg-light">
-                        <h4>pizza type</h4>
-                        <input type="radio" name="flavour" id="hawaian" value="hawaian">hawaian <br>
-                        <input type="radio" name="flavour" id="deluxe" value="deluxe">Meat Deluxe. <br>
-                        <input type="radio" name="flavour" id="pepperoni" value="pepperoni">Chicken & Beef Pepperoni<br>
-                        <input type="radio" name="flavour" id="veg" value="veg">Veg Feast. <br>
+                    <div class="col-6">
+                        <div class="p-3 border bg-light">
+                            <h4>pizza type</h4>
+                            <input type="radio" name="flavour" id="hawaian" onclick="typeHawaian()"
+                                value="hawaian">hawaian <br>
+                            <input type="radio" name="flavour" id="deluxe" onclick="typeDeluxe()" value="deluxe">Meat
+                            Deluxe. <br>
+                            <input type="radio" name="flavour" id="pepperoni" onclick="typePepperoni()"
+                                value="pepperoni">Chicken & Beef Pepperoni<br>
+                            <input type="radio" name="flavour" id="veg" onclick="typeVeg()" value="veg">Veg Feast. <br>
+                        </div>
                     </div>
-                  </div>
-                  <div class="col-6">
-                    <div class="p-3 border bg-light">
-                        <h4>pizza type</h4>
-                        <input type="radio" name="size" id="large" value="large">large @ 1000<br>
-                        <input type="radio" name="size" id="medium" value="medium">medium @ 800<br>
-                        <input type="radio" name="size" id="small" value="small">small @ 600<br><br>
+                    <div class="col-6">
+                        <div class="p-3 border bg-light">
+                            <h4>pizza size</h4>
+                            <input type="radio" name="size" id="large" value="large">large @ 1000<br>
+                            <input type="radio" name="size" id="medium" value="medium">medium @ 800<br>
+                            <input type="radio" name="size" id="small" value="small">small @ 600<br><br>
+                        </div>
                     </div>
-                  </div>
-                  <div class="col-6">
-                    <div class="p-3 border bg-light">
-                        <h4>Crust</h4>
-                        <input type="radio" name="crust" id="stuffed" value="stuffed">stuffed <br>
-                        <input type="radio" name="crust" id="crispy" value="crispy">crispy <br>
-                        <input type="radio" name="crust" id="glutten" value="glutten">glutten <br><br>
+                    <div class="col-6">
+                        <div class="p-3 border bg-light">
+                            <h4>Crust</h4>
+                            <input type="radio" name="crust" id="stuffed" value="stuffed">stuffed <br>
+                            <input type="radio" name="crust" id="crispy" value="crispy">crispy <br>
+                            <input type="radio" name="crust" id="glutten" value="glutten">glutten <br><br>
+                        </div>
                     </div>
-                  </div>
-                  <div class="col-6">
-                    <div class="p-3 border bg-light">
-                        <h4>Topping</h4>
-                        <input type="radio" name="crust" id="stuffed" value="stuffed">Sausage <br>
-                        <input type="radio" name="crust" id="crispy" value="crispy">Meat <br>
-                        <input type="radio" name="crust" id="glutten" value="glutten">Onion <br>
-                        <input type="radio" name="crust" id="glutten" value="glutten">Extra Cheese<br>
-                    </div>
+                    <div class="col-6">
+                        <div class="p-3 border bg-light">
+                            <h4>Topping</h4>
+                            <input type="radio" name="crust" id="stuffed" value="stuffed">Sausage <br>
+                            <input type="radio" name="crust" id="crispy" value="crispy">Meat <br>
+                            <input type="radio" name="crust" id="glutten" value="glutten">Onion <br>
+                            <input type="radio" name="crust" id="glutten" value="glutten">Extra Cheese<br>
+                        </div>
                     </div>
                     <h4 class="text-white">Number ordered </h4>
-                    <input class="text-center" style="width: 300px; margin-left: auto; margin-right: auto;" type="number" name="number" id="num" value="number" min="1">
-                  </div><br>
-                  <button type="button" class="btn btn-success text-center" onclick="number()">Checkout</button><br><br><br>
+                    <input class="text-center" style="width: 300px; margin-left: auto; margin-right: auto;"
+                        type="number" name="number" id="num" value="number" min="1">
                 </div>
-              </div>
+            </div>
+        </div>
 
 
         </div>
 
     </section>
+    <section class="deliveries"><br>
+        <div class="container text-center text-white">
+            <button type="button" class="btn btn-success" style="text-align: center;"
+                onclick="number()">Checkout</button><br>
+            <p id="result"></p>
+        </div>
 
-   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    </section>
+
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="app.js"></script>
     <script src="jquery.js"></script>
 
