adding the toping prices

--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
                     <div class="col-6">
                         <div class="p-3 border bg-light">
                             <h4>pizza size</h4>
-                            <input type="radio" name="size" id="large" onclick="largePizza()" value="large">large @ 1000<br>
-                            <input type="radio" name="size" id="medium" onclick="mediumPizza()" value="medium">medium @ 800<br>
-                            <input type="radio" name="size" id="small" onclick="smallPizza()" value="small">small @ 600<br><br>
+                            <input type="radio" name="size" id="large" onclick="largePizza()" value="1000">large @ 1000<br>
+                            <input type="radio" name="size" id="medium" onclick="mediumPizza()" value="800">medium @ 800<br>
+                            <input type="radio" name="size" id="small" onclick="smallPizza()" value="600">small @ 600<br><br>
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="p-3 border bg-light">
                             <h4>Crust</h4>
-                            <input type="radio" name="crust" id="stuffed" onclick="stuffedCrust ()" value="stuffed">stuffed <br>
-                            <input type="radio" name="crust" id="crispy" onclick="crispyCrust ()" value="crispy">crispy <br>
-                            <input type="radio" name="crust" id="glutten" onclick="gluttenCrust ()" value="glutten">glutten <br><br>
+                            <input type="radio" name="crust" id="stuffed" onclick="stuffedCrust ()" value="200">stuffed <br>
+                            <input type="radio" name="crust" id="crispy" onclick="crispyCrust ()" value="150">crispy <br>
+                            <input type="radio" name="crust" id="glutten" onclick="gluttenCrust ()" value="100">glutten <br><br>
                         </div>
                     </div>
                     <div class="col-6">
@@ -126,10 +126,11 @@
             <button type="button" class="btn btn-success" style="text-align: center;"
                 onclick="number()">Checkout</button><br><br>
                 <h4>Your order</h4>
-            <p id="result"></p>
+            <p id="result">trtdtrdr</p>
             <p id="size-result"></p>
             <p id="crust-type"></p>
             <p id="toping-type"></p>
+            price<p id="toping-price">ggg</p>
         </div>
 
     </section>
