adding the crust prices

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                     <div class="col-6">
                         <div class="p-3 border bg-light">
                             <h4>Crust</h4>
-                            <input type="radio" name="crust" id="stuffed" onclick="stuffedCrust ()" value="200">stuffed <br>
-                            <input type="radio" name="crust" id="crispy" onclick="crispyCrust ()" value="150">crispy <br>
-                            <input type="radio" name="crust" id="glutten" onclick="gluttenCrust ()" value="100">glutten <br><br>
+                            <input type="radio" name="crust" id="stuffed" onclick="stuffedCrust ()" value="stuffed">stuffed <br>
+                            <input type="radio" name="crust" id="crispy" onclick="crispyCrust ()" value="crust">crispy <br>
+                            <input type="radio" name="crust" id="glutten" onclick="gluttenCrust ()" value="glutten">glutten <br><br>
                         </div>
                     </div>
                     <div class="col-6">
@@ -130,6 +130,7 @@
             <p id="size-result"></p>
             <p id="crust-type"></p>
             <p id="toping-type"></p>
+            <p id="crust-price"></p>
             price<p id="toping-price">ggg</p>
         </div>
 
