making the checkout button work

--- a/index.html
+++ b/index.html
@@ -124,14 +124,20 @@
     <section class="deliveries"><br>
         <div class="container text-center text-white">
             <button type="button" class="btn btn-success" style="text-align: center;"
-                onclick="number()">Checkout</button><br><br>
+                onclick="thePrice()">Checkout</button><br><br>
                 <h4>Your order</h4>
-            <p id="result">trtdtrdr</p>
+            <p id="result"></p>
             <p id="size-result"></p>
+            <p id="size-price"></p>
             <p id="crust-type"></p>
-            <p id="toping-type"></p>
             <p id="crust-price"></p>
-            price<p id="toping-price">ggg</p>
+            <p id="toping-type"></p>
+            <p id="toping-price"></p>
+            <p id="num3">hhh</p>
+            <p id="total-price"></p><br>
+            <button type="button" class="btn btn-light">pickup</button>
+            <button type="button" class="btn btn-info">Delivery</button>
+
         </div>
 
     </section>
