adding without delivery

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <p id="toping-price"></p>
             <p id="num3">hhh</p>
             <p id="total-price"></p><br>
-            <button type="button" class="btn btn-light">pickup</button>
+            <button type="button" onclick="withoutDelivery()" class="btn btn-light">pickup</button>
             <button type="button" class="btn btn-info">Delivery</button>
 
         </div>
