--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <h4>pizza type</h4>
                             <input type="radio" name="flavour" id="hawaian" onclick="typeHawaian()"
                                 value="hawaian">hawaian <br>
-                            <input type="radio" name="flavour" id="deluxe" onclick="typeDeluxe()" value="deluxe">Meat
+                            <input type="radio" name="flavour" id="deluxe" onclick="typeDeluxe()" value="deluxe" checked>Meat
                             Deluxe. <br>
                             <input type="radio" name="flavour" id="pepperoni" onclick="typePepperoni()"
                                 value="pepperoni">Chicken & Beef Pepperoni<br>
@@ -88,7 +88,7 @@
                     <div class="col-6">
                         <div class="p-3 border bg-light">
                             <h4>pizza size</h4>
-                            <input type="radio" name="size" id="large" onclick="largePizza()" value="1000">large @
+                            <input type="radio" name="size" id="large" onclick="largePizza()" value="1000" checked>large @
                             1000<br>
                             <input type="radio" name="size" id="medium" onclick="mediumPizza()" value="800">medium @
                             800<br>
@@ -100,11 +100,11 @@
                         <div class="p-3 border bg-light">
                             <h4>Crust</h4>
                             <input type="radio" name="crust" id="stuffed" onclick="stuffedCrust ()"
-                                value="stuffed">stuffed <br>
-                            <input type="radio" name="crust" id="crispy" onclick="crispyCrust ()" value="crust">crispy
+                                value="stuffed" checked>stuffed large@200, medium@150, small@100<br>
+                            <input type="radio" name="crust" id="crispy" onclick="crispyCrust ()" value="crust">crispy large@200, medium@150, small@100
                             <br>
                             <input type="radio" name="crust" id="glutten" onclick="gluttenCrust ()"
-                                value="glutten">glutten <br><br>
+                                value="glutten">glutten large@200, medium@150, small@100 <br><br>
                         </div>
                     </div>
                     <div class="col-6">
@@ -112,7 +112,7 @@
                             <h4>Topping</h4>
                             <input type="radio" name="toping" id="sausage" onclick="sausageToping()"
                                 value="sausage">Sausage large@300,medium@250,small@200<br>
-                            <input type="radio" name="toping" id="meat" onclick="meatToping ()" value="meat">Meat large@300, medium@250, small@200 <br>
+                            <input type="radio" name="toping" id="meat" onclick="meatToping ()" value="meat" checked>Meat large@300, medium@250, small@200 <br>
                             <input type="radio" name="toping" id="onion" onclick="onionToping ()" value="onion">Onion large@300, medium@250, small@200
                             <br>
                             <input type="radio" name="toping" id="cheese" onclick="cheeseToping ()" value="cheese">Extra
