adding some jquery effects

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <h4>pizza type</h4>
                             <input type="radio" name="flavour" id="hawaian" onclick="typeHawaian()"
                                 value="hawaian">hawaian <br>
-                            <input type="radio" name="flavour" id="deluxe" onclick="typeDeluxe()" value="deluxe" checked>Meat
+                            <input type="radio" name="flavour" id="deluxe" onclick="typeDeluxe()" value="deluxe">Meat
                             Deluxe. <br>
                             <input type="radio" name="flavour" id="pepperoni" onclick="typePepperoni()"
                                 value="pepperoni">Chicken & Beef Pepperoni<br>
@@ -88,7 +88,7 @@
                     <div class="col-6">
                         <div class="p-3 border bg-light">
                             <h4>pizza size</h4>
-                            <input type="radio" name="size" id="large" onclick="largePizza()" value="1000" checked>large @
+                            <input type="radio" name="size" id="large" onclick="largePizza()" value="1000">large @
                             1000<br>
                             <input type="radio" name="size" id="medium" onclick="mediumPizza()" value="800">medium @
                             800<br>
@@ -100,7 +100,7 @@
                         <div class="p-3 border bg-light">
                             <h4>Crust</h4>
                             <input type="radio" name="crust" id="stuffed" onclick="stuffedCrust ()"
-                                value="stuffed" checked>stuffed large@200, medium@150, small@100<br>
+                                value="stuffed" >stuffed large@200, medium@150, small@100<br>
                             <input type="radio" name="crust" id="crispy" onclick="crispyCrust ()" value="crust">crispy large@200, medium@150, small@100
                             <br>
                             <input type="radio" name="crust" id="glutten" onclick="gluttenCrust ()"
@@ -112,7 +112,7 @@
                             <h4>Topping</h4>
                             <input type="radio" name="toping" id="sausage" onclick="sausageToping()"
                                 value="sausage">Sausage large@300,medium@250,small@200<br>
-                            <input type="radio" name="toping" id="meat" onclick="meatToping ()" value="meat" checked>Meat large@300, medium@250, small@200 <br>
+                            <input type="radio" name="toping" id="meat" onclick="meatToping ()" value="meat">Meat large@300, medium@250, small@200 <br>
                             <input type="radio" name="toping" id="onion" onclick="onionToping ()" value="onion">Onion large@300, medium@250, small@200
                             <br>
                             <input type="radio" name="toping" id="cheese" onclick="cheeseToping ()" value="cheese">Extra
@@ -144,8 +144,8 @@
                 <p id="toping-price"></p>
                 <p id="num3"></p>
                 <p id="total-price"></p><br>
-                <button type="button" onclick="withoutDelivery()" class="btn btn-light">pickup</button>
-                <button type="button" onclick="withDelivery()" class="btn btn-info">Delivery</button>
+                <button type="button" onclick="withoutDelivery()" class="btn btn-light btn2">pickup</button>
+                <button type="button" onclick="withDelivery()" class="btn btn-info btn3">Delivery</button>
             </div>
 
         </div>
